--- a/porfolio/public/style.css
+++ b/porfolio/public/style.css
@@ -1,3 +1,5 @@
+
+
 *{
     margin: 0 ;
     padding: 0;
@@ -15,3 +17,23 @@ body{
     overflow-y: scroll;
 
 }
+
+/* Estilos para el scrollbar */
+::-webkit-scrollbar {
+    width: 15px; /* Ancho del scrollbar */
+    height: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0.1); /* Color de fondo del track (fondo detrás del scrollbar) */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(191, 191, 76); /* Color del scrollbar */
+    border-radius: 1px; /* Radio de borde del scrollbar */
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.5); /* Cambia el color del scrollbar en hover */
+  }
+  
