--- a/porfolio/src/components/Proyects/proyects.css
+++ b/porfolio/src/components/Proyects/proyects.css
@@ -1,47 +1,140 @@
-#proyects{
-    margin: 0 auto;
-    min-height: calc(100vh - 4rem);
-    width: 100vw;
-    max-width: 60rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 0 1rem;
+.slider-container {
+  margin: 0 auto;
+  height: 45rem;
+  margin-top: 20rem;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 0px 50px yellow; 
+  border-radius: 10%;
 }
 
-.proyectTtitle{
-    margin: 1rem 0;
-    font-size: 3rem;
+.slider {
+  display: inline-flex; 
+}
+.title {
+  font-size: 3rem;
+  font-weight: 600;
+  text-align: center;
+  animation: pulseAnimation 5s infinite alternate;
+  margin-bottom: 3rem;
+  text-shadow: 5px 3px 5px rgba(255, 255, 255, 0.5); 
+}
+
+@keyframes pulseAnimation {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1); 
+  }
+}
+
+.item {
+  width: 50rem; 
+  height: 30rem;
+  box-shadow: 0px 0px 50px yellow;
+  border-radius: 10px;
+  margin-right: 5.1rem; 
+  position: relative;
+  overflow: hidden;
+  cursor: grab;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+}
+
+.item img {
+  height: 30rem;
+  width: 50rem;
+  pointer-events: none;
+  display: block;
+  margin: 0 auto;
+  transition: transform 1s ease-in-out;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+.overlay-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.95); 
+  z-index: 999; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
-.proyectDesc{
-    font-weight: 300;
-    font-size: 1rem;
-    max-width: 45rem;
-}
-
-.proyectImgs{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100vw;
-    max-width: 65rem;
+.view-button {
+  color: white;
+  top: 0;
+  right: 0;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  outline: none;
+  transition: background-color 0.2s ease-in-out;
 }
 
 
-.proyectImg{
-    object-fit: cover;
-    height: 20rem;
-    margin: 0.5rem;
+.item:hover .overlay {
+  opacity: 1;
+}
+.item:hover {
+  transform: scale(1.2);
+  filter: brightness(
+    0.8
+  ); 
 }
 
 
-@media screen and (max-width:585px){
-    .proyectImg{
-        height: 48vw;
-    }
+.item:hover .overlay .view-button {
+  background-color: #ff0000;
+}
+
+
+
+@media screen and (max-width: 720px) {
+  .slider-container {
+    overflow-x: hidden !important; 
+    margin-top: 5rem;
+    height: 30rem;
+    margin-bottom: 5rem;
+    box-shadow: 0px 0px 100px yellow; 
+    border-radius: 5%;
+  }
+
+  .slider {
+    width: 100 !important ; 
+  }
+
+  .item {
+    width: 390px !important; 
+    height: 300px !important;
+    margin-right: 2rem !important;
+  }
+  .item:hover {
+    transform: scale(1);
+  }
+
+  .item img {
+    height: 100% !important; 
+    max-width: 100% !important; 
+  }
+  .view-button {
+    top: 0;
+  }
 }
